# PyDL

./: LICENSE  README.md  pyproject.toml  setup.py
pydl/: __init__.py  conf.py
pydl/examples/: boston_fc_example.py  breast_cancer_fc_example.py  cifar10_conv_example.py  cifar10_resnet_example.py  gru_character_example.py  gru_sinusoid_example.py  iris_fc_example.py  lstm_character_example.py  lstm_fourier_example.py  lstm_sinusoid_example.py  mnist_adam_example.py  mnist_batchnorm_example.py  mnist_conv_example.py  mnist_dropout_example.py  mnist_fc_example.py  mnist_rmsprop_example.py  rnn_character_example.py  rnn_sinusoid_example.py  spiral_fc_example.py
pydl/nn/: activations.py  batchnorm.py  conv.py  dropout.py  gru.py  layers.py  lstm.py  nn.py  pool.py  residual_block.py  rnn.py
pydl/tests/: __init__.py  performance_test.py  test_activations.py  test_batchnorm.py  test_conv.py  test_dropout.py  test_gru.py  test_layers.py  test_lstm.py  test_nn.py  test_pool.py  test_residual_block.py  test_rnn.py  test_save_load_layers.py  test_save_load_training.py  test_training.py
pydl/training/: __init__.py  adam.py  momentum.py  plain_training.py  recurrent_training.py  rmsprop.py  sgd.py  training.py
src/pydl/examples/: boston_fc_example.py  gru_sinusoid_example.py  lstm_fourier_example.py  lstm_sinusoid_example.py  mnist_batchnorm_example.py  mnist_conv_example.py  rnn_sinusoid_example.py
src/pydl/loss/: loss.py  mse.py
src/pydl/nn/: gru.py  layers.py  lstm.py  nn.py  (+1 more)
tests/: test_conv.py  test_nn.py  test_pool.py  test_residual_block.py  test_training.py
(+6 files in other folders)
