[tool.poetry]
name = "pydl"
version = "0.1.0"
description = "Yet another Python-based Deep Learning library utilizing NumPy only"
authors = ["Avinash Ranganath <nash911@gmail.com>"]
license = "file = LICENSE.txt"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.15.4"
matplotlib = "^3.0.3"
scipy = "^1.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
